Fix spacing

--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -158,6 +158,7 @@
 .userpage-social {
     width: 100%;
     margin-bottom: 15px;
+    margin-top: 10px;
     overflow: hidden;
 }
 
